panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__char__test_prefixed_char_literal_types.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/char/test_prefixed_char_literal_types.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/char/test_prefixed_char_literal_types.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (expression (0 `int` @0))
         (expression (0 `int` @0))
         (expression (0 `int` @0))
         (expression (0 `int` @0)))))

----- stderr -----
